# sql-helper

./: .gitignore  Cargo.toml  README.md  deno.json
crates/sql-helper/: Cargo.toml
crates/sql-helper-derive/: Cargo.toml
crates/sql-helper-derive/migrations/: 001.sql
crates/sql-helper-derive/src/: lib.rs
crates/sql-helper-derive/src/query/: main_struct.rs  mod.rs  parameters.rs  row_struct.rs  test.rs
crates/sql-helper-derive/tests/: from_row.rs  query.rs
crates/sql-helper-lib/: Cargo.toml
crates/sql-helper-lib/src/: error.rs  from_row.rs  lib.rs  migrations.rs  postgres_types_jiff_0_2.rs  test.rs
crates/sql-helper/src/: cli.rs  main.rs  operation.rs  operation_group.rs
src/: cli.rs  main.rs  operation.rs  operation_group.rs
