[package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "sql-helper"
rust-version = "1.85"
version = "0.3.0"

[dependencies]
# Generating source code
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0"
syn = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
regex = { version = "1.11", default-features = false, features = ["std"] }

# Error handling
thiserror = "2.0"

# DB
postgres = { version = "0.19" }

# CLI Helper
cli-helper = { git = "https://github.com/trentshailer/cli-helper.git", rev = "1bd2aa5", features = [
    "generate",
] }
# cli-helper = { path = "../cli-helper", features = ["generate"] }

[lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[lints.clippy]
"as_conversions" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
