[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
postgres = { version = "0.19" }

sql-helper-lib = { path = "crates/sql-helper-lib" }

# Timestamps
[workspace.lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[workspace.lints.clippy]
"as_conversions" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
