[package]
description = "Derives for ts-sql-helper-lib"
name = "ts-sql-helper-derive"
version = "0.2.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
ts-sql-helper-lib = { version = "0.3", path = "../sql-helper-lib" }

[lints]
workspace = true
