[package]
description = "Derives for ts-sql-helper-lib"
name = "ts-sql-helper-derive"
version = "0.6.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
postgres-types = { workspace = true }
proc-macro2 = { version = "1" }
quote = { version = "1" }
regex = { version = "1.11", default-features = false, features = ["std"] }
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
ts-sql-helper-lib = { path = "../sql-helper-lib", features = ["derive", "test"] }

[lints]
workspace = true
