[package]
description = "Helpers for working with SQL in my projects."
name = "ts-sql-helper-lib"
version = "0.5.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
postgres = { workspace = true }
postgres-types = { version = "0.2" }

jiff = { version = "0.2", features = ["serde"] }

bytes = "1.0"
postgres-protocol = "0.6.8"
serde = { version = "1.0", features = ["derive"] }

ts-sql-helper-derive = { version = "0.3", path = "../sql-helper-derive", optional = true }

[features]
derive = ["dep:ts-sql-helper-derive"]

[lints]
workspace = true
