[package]
description = "Helpers for working with SQL in my projects."
name = "ts-sql-helper-lib"
version = "0.7.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
postgres = { workspace = true, features = ["with-uuid-1"] }
postgres-types = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"], optional = true }

jiff = { version = "0.2", features = ["serde"] }

bytes = "1.0"
postgres-protocol = "0.6.8"
serde = { version = "1.0", features = ["derive"] }

ts-sql-helper-derive = { version = "0.6", path = "../sql-helper-derive", optional = true }

rand = { version = "0.9", optional = true }
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
async = ["dep:tokio-postgres"]
derive = ["dep:ts-sql-helper-derive"]
test = ["dep:rand", "dep:testcontainers", "dep:testcontainers-modules", "dep:uuid"]

[lints]
workspace = true
