[package]
name = "sql-helper"
publish = false
version = "0.6.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# DB
postgres = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# CLI Helper
ts-cli-helper = { version = "0.6" }
ts-rust-helper = { version = "0.9", features = ["styled"] }

ts-sql-helper-lib = { workspace = true }
